v2.0.8
----------------------------------------------------------------------------------------------------
 * adapted to latest mod_ssl api changes in trunk
 * fixed a use-after-free when updating account information from the server.
 * removed httpd trunk patch as no longer needed
 * updated httpd 2.4.x patch with mod_ssl changes

v2.0.7
----------------------------------------------------------------------------------------------------
 * supports the new mod_ssl hooks for interworking
 * fixing a crash when authentication status was deemed invalid by CA.
 * bringing back some internal changes from apache svn.

v2.0.6
----------------------------------------------------------------------------------------------------
 * MDs with static certificate (MDCertificateFile) are not auto-renewed. But they are watched
   for expiration and trigger a configured MDMessageCmd.
 * ACME challenge method 'tls-alpn-01' is now checked for each domain in an MD individually
   and no longer needs to be available for all domains.

v2.0.5
----------------------------------------------------------------------------------------------------
 * Renewal jobs now have their own log attached with timestamps when renewal was started,
   ran into errors, finished. The job JSON files are copied from staging into the domain
   directory for possible later review.
 * job logs now list all activities during renewal.
 * new `MDMessageCmd` added as alternative to MDNotifyCmd. This command is called with an
   addition "reason" parameter that specifies what happened to the manged domain. 
 * `MDNotifyCmd` is now called for each domain that has been successfully renewed. Not for 
   all Managed Domains after all have been processed. This gives notifications earlier.
   Notification errors are now also collected under MD status and notifications are retried
   with backoff delays.
 * New directive `MDServerStatus` to control if Managed Domains are listed in Apache's 